fix: use clearly fake MongoDB Atlas placeholders to avoid secret scanner false positives

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ NODE_ENV=development
 # ----------------------------
 # MongoDB
 # ----------------------------
-MONGO_URI=mongodb://localhost:27017/bank-transaction-system
-# Atlas example:
-# MONGO_URI=mongodb+srv://USERNAME:PASSWORD@cluster.mongodb.net/bank-transaction-system
+MONGO_URI=YOUR LOCAL MONGO URI
+# Atlas example (replace YOUR_USERNAME, YOUR_PASSWORD, and YOUR_CLUSTER_ID with real values):
+# MONGO_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER_ID.mongodb.net/bank-transaction-system
 
 # ----------------------------
 # JWT
