refactor: move backend into backend/ and scaffold full React frontend
- Introduce monorepo layout: backend/ + frontend/ with shared root package.json
- Move server.js, src/, scripts/, .env.example, package.json, package-lock.json  backend/
- Add root package.json with install:all, dev:backend, dev:frontend, build scripts
- Update .gitignore for monorepo (nested .env, node_modules, frontend/dist)
- Fix backend/package.json main field: index.js  server.js
- Add React+Vite frontend (App.jsx, contexts, lib, components, pages)
  - AuthContext, ToastContext
  - api.js (axios + interceptors), auth.js (JWT helpers), download.js (CSV export)
  - ProtectedRoute, AdminRoute, Header, MobileNav, Toast, AccountCard
  - TransactionList, TransferForm, FilterBar, ThreeDParallaxHero, Scene3DInner
  - Pages: Login, Register, Dashboard, AccountDetail, Transactions, Profile
  - Pages: AdminDashboard, NotFound, Unauthorized
- Fix API_ROUTES key refs: balanceaccountBalance, exportTransactionstransactionExport, adminAccountsadminFreeze

--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "bank-transaction-system",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "bank-transaction-sys",
+  "version": "1.1.0",
+  "description": "Monorepo root for Bank Transaction System — backend (Node/Express) + frontend (React/Vite)",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon server.js",
-    "start": "node server.js",
-    "seed": "node scripts/seedDemo.js"
+    "install:backend":  "cd backend  && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "install:all":      "npm run install:backend && npm run install:frontend",
+
+    "dev:backend":  "cd backend  && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev": "start \"backend\"  cmd /k \"cd backend  && npm run dev\" && start \"frontend\" cmd /k \"cd frontend && npm run dev\"",
+
+    "start":  "cd backend && npm run start",
+    "build":  "cd frontend && npm run build",
+    "seed":   "cd backend && npm run seed",
+
+    "lint:frontend": "cd frontend && npm run lint",
+    "format:frontend": "cd frontend && npm run format"
   },
-  "keywords": [],
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
+  "engines": {
+    "node": ">=18.0.0",
+    "npm":  ">=9.0.0"
+  },
+  "keywords": ["banking", "express", "react", "vite", "mongodb"],
   "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "express-rate-limit": "^8.2.1",
-    "express-validator": "^7.3.1",
-    "fast-csv": "^5.0.5",
-    "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.2.1",
-    "nodemailer": "^8.0.1"
-  }
+  "license": "ISC"
 }
