--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# ── Environment files (all levels) ──────────────
 .env
-*node_modules
+.env.*
+!.env.example
+!**/.env.example
+
+# ── Dependencies ─────────────────────────────────
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# ── Logs ─────────────────────────────────────────
 *.log
+logs/
+backend/logs/
+
+# ── Frontend build output ─────────────────────────
+frontend/dist/
+frontend/.vite/
+frontend/.cache/
+
+# ── Misc ──────────────────────────────────────────
+.DS_Store
+Thumbs.db
+*.pem
