--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,7 @@ NODE_ENV=development
 # ----------------------------
 MONGO_URI=YOUR LOCAL MONGO URI
 # Atlas example (replace YOUR_USERNAME, YOUR_PASSWORD, and YOUR_CLUSTER_ID with real values):
-# MONGO_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER_ID.mongodb.net/bank-transaction-system
+# MONGO_URI=replace_with_your_mongodb_uri 
 
 # ----------------------------
 # JWT
