fix: apply all CodeRabbit security and reliability recommendations
- env.example: add HTTPS/TLS vars (HTTPS_ENABLED, SSL_KEY_PATH, TRUST_PROXY)
- env.example: add MongoDB TLS comment + full Atlas URI with retryWrites/tls params
- env.example: add JWT_EXPIRES_IN=15m and JWT_REFRESH_EXPIRES_IN=7d
- env.example: tighten rate limits (auth 20->5, transfer 30->10) per banking standards
- db.js: convert connectToDB() to async/await so callers can await it
- server.js: wrap startup in async startServer(); await connectToDB() before listen; use PORT env var
- app.js: add 404 handler and global error handler (4-param) registered after all routes
- scripts/seedDemo.js: wrap session ops in try/catch/finally with session.abortTransaction() on error

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,12 +10,20 @@
 PORT=3000
 NODE_ENV=development
 
+# HTTPS / TLS (required in production for banking security)
+HTTPS_ENABLED=false
+# SSL_KEY_PATH=/path/to/ssl/key.pem
+# SSL_CERT_PATH=/path/to/ssl/cert.pem
+# TRUST_PROXY=true   # enable if running behind nginx / a reverse proxy
+
 # ----------------------------
 # MongoDB
 # ----------------------------
+# IMPORTANT: In production, always use TLS/SSL and authentication.
+# Append: ?retryWrites=true&w=majority&tls=true
 MONGO_URI=YOUR LOCAL MONGO URI
 # Atlas example (replace YOUR_USERNAME, YOUR_PASSWORD, and YOUR_CLUSTER_ID with real values):
-# MONGO_URI=replace_with_your_mongodb_uri 
+# MONGO_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER_ID.mongodb.net/bank-transaction-system?retryWrites=true&w=majority&tls=true
 
 # ----------------------------
 # JWT
@@ -23,6 +31,11 @@ MONGO_URI=YOUR LOCAL MONGO URI
 # Generate a strong random secret (min 32 chars):
 #   node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=REPLACE_WITH_A_STRONG_RANDOM_SECRET_MIN_32_CHARS
+
+# JWT token expiration (use short durations for banking security)
+JWT_EXPIRES_IN=15m
+# Refresh token expiration
+JWT_REFRESH_EXPIRES_IN=7d
 
 # ----------------------------
 # Email / SMTP  (nodemailer)
@@ -47,9 +60,10 @@ EMAIL_FROM=no-reply@example.com
 # Rate Limiting
 # ----------------------------
 # Auth routes  (login / register / logout)
+# Banking standard: 5 attempts max to prevent brute-force attacks
 AUTH_RATE_LIMIT_WINDOW_MIN=15
-AUTH_RATE_LIMIT_MAX=20
+AUTH_RATE_LIMIT_MAX=5
 
 # Transfer / transaction creation route
 TRANSFER_RATE_LIMIT_WINDOW_MIN=15
-TRANSFER_RATE_LIMIT_MAX=30
+TRANSFER_RATE_LIMIT_MAX=10
